--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -99,62 +99,64 @@
                 <h2>Últimos cupos!!</h2>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/evento1.png" title="Pop & Rock en un concierto mixto"
+                            alt="Pop & Rock en un concierto mixto">
                     </figure>
-                    <h3>Nombre Evento</h3>
+                    <h3>Pop & Rock en un concierto mixto</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Se agotan las entradas para el concierto mixto.
+                            31/10 21hs.
+                        </p>
+                    </details>
+                    <p>$580</p>
+                    <input type="button" value="Comprar">
+                </article>
+                <article>
+                    <figure>
+                        <img src="../img/evento2.png" title="Fixion logotipo"
+                            alt="El logotipo de Fixion">
+                    </figure>
+                    <h3>Fixion toca en Montevideo</h3>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>01/11 18hs.</p>
                     </details>
                     <p>Insertarprecioaqui</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/evento3.jpg" title="Conferencia orientacional"
+                            alt="Conferencia orientacional">
                     </figure>
-                    <h3>Nombre Evento</h3>
+                    <h3>Conferencia orientacional. ¡Como vivir mejor!</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>31/10 20hs.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$460</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/evento4.jpg" title="Conferencia de TED"
+                            alt="Conferencia de TED">
                     </figure>
-                    <h3>Nombre Evento</h3>
+                    <h3>TED vuelve con una conferencia sobre tecnología</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>7/12 16hs.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
-                    <input type="button" value="Comprar">
-                </article>
-                <article>
-                    <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
-                    </figure>
-                    <h3>Nombre Evento</h3>
-                    <details>
-                        <summary>
-                            Más detalles
-                        </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                    </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$720</p>
                     <input type="button" value="Comprar">
                 </article>
             </aside>
