--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -11,15 +11,15 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
-<body class="bodyGeneralBackend">
+<body>
     <header>
         <figure>
             <img src="../img/logo.png">
         </figure>
         <form action="index.html">
-            <input type="submit" value="SALIR">
+            <input type="submit" value="SALIR" name="cerrarSesion">
         </form>
-        <p>Hola, <strong>Nombre de Usuario</strong></p>
+        <p>Hola, <strong>Robertooooooooo</strong></p>
     </header>
 
     <nav>
@@ -39,10 +39,10 @@
             <p>Administrador > Listado de Eventos</p>
             <h1>LISTADO DE EVENTOS</h1>
             <form action="crearEvento.html">
-                <input type="submit" value="AGREGAR EVENTOS">
+                <input type="submit" value="AGREGAR EVENTOS" name="linkCrearEvento">
             </form>
             <form id="filtrador">
-                <input type="text" placeholder="FILTRAR" id="Buscador">
+                <input type="text" placeholder="FILTRAR" id="Buscador" name="buscadorEventos">
             </form>
         </section>
 
