--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -27,7 +27,7 @@
 
         </nav>
         <form>
-            <input type="text" placeholder="DESCUBRIR EVENTOS">
+            <input type="text" placeholder="DESCUBRIR EVENTOS" name="buscadorEventos">
         </form>
         <nav id="AyudaIngresar">
             <ul>
@@ -56,7 +56,7 @@
                         <p>Local Tupema 20hs.</p>
                     </details>
                     <p>$799</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article class="ElDeEnMedio">
                     <!--Esta clase le da al articulo un margen lateral-->
@@ -72,7 +72,7 @@
                         <p>Nirvana 2.0 viene a Uruguay</p>
                     </details>
                     <p>$1994.50</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -87,7 +87,7 @@
                         <p>El cuarteto(Quinteto) están agotando las entradas</p>
                     </details>
                     <p>$1600</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <footer>
                     <!--Ocupa toda la sección y limpia la flotación-->
@@ -112,7 +112,7 @@
                         </p>
                     </details>
                     <p>$580</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -127,7 +127,7 @@
                         <p>01/11 18hs.</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -142,7 +142,7 @@
                         <p>31/10 20hs.</p>
                     </details>
                     <p>$460</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -157,7 +157,7 @@
                         <p>7/12 16hs.</p>
                     </details>
                     <p>$720</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
             </aside>
             <section>
@@ -176,7 +176,7 @@
                         <p>De 19hs. a 21hs. en el Hotel Sheraton</p>
                     </details>
                     <p>$400</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
@@ -191,7 +191,7 @@
                         <p>De 16hs. a 19hs. en el Hotel Sheraton</p>
                     </details>
                     <p>$380</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -206,7 +206,7 @@
                         <p>DevCode presenta su plan de mercado como ejemplo.</p>
                     </details>
                     <p>$680</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <footer>
                     VER MÁS
@@ -228,7 +228,7 @@
                         <p>Sabado 28/11 21:30hs.</p>
                     </details>
                     <p>$400</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
@@ -243,7 +243,7 @@
                         <p>Domingo 10/11 18hs</p>
                     </details>
                     <p>$460</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <article>
                     <figure>
@@ -258,7 +258,7 @@
                         <p>Miercoles 27/11 21:30hs.</p>
                     </details>
                     <p>$510</p>
-                    <input type="button" value="Comprar">
+                    <input type="button" value="Comprar" name="comprarEntrada">
                 </article>
                 <footer>
                     VER MÁS
@@ -276,13 +276,13 @@
                 <!--Flotado a la izquierda-->
                 <h3>¡La banda por fin se reune!</h3>
                 <p>La polémica banda, logra resolver sus conflictos después de 10 años de disputa. El vocalista sumido en el alcohol demandó al guitarrista por uso de droga indebido durante un show.</p>
-                <input type="button" value="Leer más">
+                <input type="button" value="Leer más" name="masInfoNoticia">
             </article>
             <article id=UltimoArticulo>
                 <!--Flotado a la derecha-->
                 <h3>Disturbios sobre hielo</h3>
                 <p>Los conocidos rivales Prakasata y Ujmapuk desataron toda su frustración sin esperar a terminar el partido. Las autoridades pararon el encuentro, ambos equipos están descalificados.</p>
-                <input type="button" value="Leer más">
+                <input type="button" value="Leer más" name="masInfoNoticia">
             </article>
             <figure id=UltimaFoto>
                 <!--Flotado a la derecha-->
@@ -315,8 +315,8 @@
                 <label>
                     ¡Ingresá tu e-mail y enterate de todas las novedades!
                 </label>
-                <input type="text" placeholder="cosopere@gmail.com">
-                <input type="button" value="Ingresar">
+                <input type="text" placeholder="cosopere@gmail.com" name="email">
+                <input type="button" value="Ingresar" name="confirmarSuscripcion">
             </form>
         </section>
         
