Auto stash before merge of "master" and "origin/master"

--- a/Proyecto - Diseño de Interfaz Web/admin/crearEvento.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/crearEvento.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Listado - Admin</title>
+    <title>Crear Evento - Admin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Página exclusiva del admin, usada para la creación de eventos">
+    <meta name="keywords" content="Crear, Eventos, Admin, Tickets, Shows, Backend">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <figure>
-            <img src="../img/logo.png">
+            <img src="../img/logo.png" title="Logotipo" alt="Logotipo de un puño sosteniendo un ticket">
         </figure>
         <form action="index.html">
             <input type="submit" value="SALIR" name="cerrarSesion">
@@ -83,7 +83,7 @@
             </fieldset>
         </form>
 
-        <figure id="logoGrande"><img src="../img/logo.png"></figure>
+        <figure id="logoGrande"><img src="../img/logo.png" title="Logotipo Grande" alt="Logotipo grande de un puño sosteniendo un ticket"></figure>
     </main>
 </body>
 
