--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -5,8 +5,8 @@
     <title>Listado - Admin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Página exclusiva del admin, en esta se pueden consultar y modificar todos los datos referentes a los eventos">
+    <meta name="keywords" content="Listado, Eventos, Datos, Filtrar, Backend">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <figure>
-            <img src="../img/logo.png">
+            <img src="../img/logo.png" title="Logotipo" alt="Logotipo de un puño sosteniendo un ticket">
         </figure>
         <form action="index.html">
             <input type="submit" value="SALIR" name="cerrarSesion">
@@ -69,9 +69,9 @@
 
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -86,9 +86,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -103,9 +103,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -120,9 +120,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -137,9 +137,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -154,9 +154,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -171,9 +171,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -188,9 +188,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -205,9 +205,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -222,9 +222,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -239,9 +239,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -256,9 +256,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -273,9 +273,9 @@
                     <td>$ 000</td>
                     <td>
                         <ul>
-                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
-                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                            <li><img class="funcionEditar" src="../img/transpa.png" title="Editar" alt="Editar Evento"></li>  
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" title="Duplicar" alt="Duplicar Evento"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png" title="Eliminar" alt="Eliminar Evento"></li>
                         </ul>
                     </td>
                 </tr>
@@ -283,7 +283,7 @@
             </tbody>
         </table>
 
-        <figure id="flechaDerecha"><img src="../img/flechaDerecha.png"></figure>
+        <figure id="flechaDerecha"><img src="../img/flechaDerecha.png" title="Siguiente" alt="Flecha para pasar al siguiente listado"></figure>
         <p id="paginasTabla"><span>1</span> 2 3</p>
     </main>
 </body>
