--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -15,8 +15,8 @@
 
     <header>
         <figure>
-            <img src="../img/logo.png" title="Logo de un puño sosteniendo un tiket"
-                alt="Logo de un puño sosteniendo un tiket">
+            <img src="../img/logo.png" title="Logo de un puño sosteniendo un ticket"
+                alt="Logo de un puño sosteniendo un ticket">
         </figure>
 
         <nav>
