--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -5,8 +5,8 @@
     <title>Login - Admin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Login mediante el cual se puede acceder a las funcionalidades de administración de los eventos">
+    <meta name="keywords" content="Login, Admin, Backend, Ingresar, Sistema">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
         <p id="pLogin">Todos los campos son obligatorios</p>
 
         <figure id="figureLogin">
-            <img id="logoLogin" src="../img/logo.png">
+            <img id="logoLogin" src="../img/logo.png" title="Logotipo" alt="Logotipo de un puño sosteniendo un ticket">
         </figure>
 
         <form id="formLogin" action="crearEvento.html">
