Auto stash before merge of "master" and "origin/master"

--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -21,8 +21,8 @@
 
         <nav>
             <ul>
-                <li><a href="#">AGENDA</a></li>
-                <li><a href="#">NOTICIAS</a></li>
+                <li><a href="../frontend/index.html#Agenda">AGENDA</a></li>
+                <li><a href="../frontend/index.html#Noticias">NOTICIAS</a></li>
             </ul>
 
         </nav>
@@ -31,13 +31,14 @@
         </form>
         <nav id="AyudaIngresar">
             <ul>
-                <li><a href="#">AYUDA</a></li>
                 <li><a href="../admin/index.html">INGRESAR</a></li>
+                <li><a href="../frontend/index.html#Ayuda">AYUDA</a></li>
+
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="Agenda">
             <!--Sección principal, contiene 3 secciones con 3 artículos cada uno y un aside con los último cupos-->
             <section>
                 <!--Sección de música.Está compuesto por 3 artículos flotando a la izquierda y un footer-->
@@ -45,8 +46,7 @@
                 <h2>Música</h2>
                 <article>
                     <figure>
-                        <img src="../img/banda1.jpg" title="Catupecu Machu"
-                            alt="Evento de la banda Catupecu Machu">
+                        <img src="../img/banda1.jpg" title="Catupecu Machu" alt="Evento de la banda Catupecu Machu">
                     </figure>
                     <h3>Catupecu Machu viene a la cuidad</h3>
                     <details>
@@ -61,8 +61,7 @@
                 <article class="ElDeEnMedio">
                     <!--Esta clase le da al articulo un margen lateral-->
                     <figure>
-                        <img src="../img/banda2.jpg" title="Logo Foo Fighters"
-                            alt="Segundo logo de Nirvana">
+                        <img src="../img/banda2.jpg" title="Logo Foo Fighters" alt="Segundo logo de Nirvana">
                     </figure>
                     <h3>Foo Fighters</h3>
                     <details>
@@ -76,8 +75,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/banda3.jpg" title="Cantante adolecente"
-                            alt="Una banda tocando música">
+                        <img src="../img/banda3.jpg" title="Cantante adolecente" alt="Una banda tocando música">
                     </figure>
                     <h3>El Cuarteto se presenta</h3>
                     <details>
@@ -116,8 +114,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/evento2.png" title="Fixion logotipo"
-                            alt="El logotipo de Fixion">
+                        <img src="../img/evento2.png" title="Fixion logotipo" alt="El logotipo de Fixion">
                     </figure>
                     <h3>Fixion toca en Montevideo</h3>
                     <details>
@@ -131,8 +128,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/evento3.jpg" title="Conferencia orientacional"
-                            alt="Conferencia orientacional">
+                        <img src="../img/evento3.jpg" title="Conferencia orientacional" alt="Conferencia orientacional">
                     </figure>
                     <h3>Conferencia orientacional. ¡Como vivir mejor!</h3>
                     <details>
@@ -146,8 +142,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/evento4.jpg" title="Conferencia de TED"
-                            alt="Conferencia de TED">
+                        <img src="../img/evento4.jpg" title="Conferencia de TED" alt="Conferencia de TED">
                     </figure>
                     <h3>TED vuelve con una conferencia sobre tecnología</h3>
                     <details>
@@ -165,8 +160,7 @@
                 <h2>Conferencias</h2>
                 <article>
                     <figure>
-                        <img src="../img/conferencia1.png" title="Conferencia de Genexus"
-                            alt="Conferencia de Genexus">
+                        <img src="../img/conferencia1.png" title="Conferencia de Genexus" alt="Conferencia de Genexus">
                     </figure>
                     <h3>Genexus</h3>
                     <details>
@@ -195,8 +189,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/conferencia3.png" title="Conferencia de DevCode"
-                            alt="Conferencia de DevCode">
+                        <img src="../img/conferencia3.png" title="Conferencia de DevCode" alt="Conferencia de DevCode">
                     </figure>
                     <h3>DevCode revele sus planes economicos para el siguiente año</h3>
                     <details>
@@ -297,15 +290,19 @@
             <ul>
                 <li>
                     <h3>¿Como puedo contactarlos?</h3>
-                    <p>En cualquier abitab puedes retirar tu ticket, pero si buscas ayuda con uan compra o devolución puedes llamar a nuestro número 096-771-251</p>
+                    <p>En cualquier abitab puedes retirar tu ticket, pero si buscas ayuda con uan compra o devolución
+                        puedes llamar a nuestro número 096-771-251</p>
                 </li>
                 <li>
                     <h3>¿Puedo cancelar una compra?</h3>
-                    <p>La inasistencia a un evento no es razón para cancelar una compra. Por otro lado contactando con antención al cliente se puede brindar apoyo al cliente para realizar esta acción.</p>
+                    <p>La inasistencia a un evento no es razón para cancelar una compra. Por otro lado contactando con
+                        antención al cliente se puede brindar apoyo al cliente para realizar esta acción.</p>
                 </li>
                 <li>
                     <h3>¿Qué pasa cuando un evento se cancela o posterga?</h3>
-                    <p>Este es uno de los casos en los que la empresa se compromete completamente a la devolución del efectivo, en caso de que el evento se re-programe, se comunicará con el cliente preguntando si quiere darse de baja al evento.</p>
+                    <p>Este es uno de los casos en los que la empresa se compromete completamente a la devolución del
+                        efectivo, en caso de que el evento se re-programe, se comunicará con el cliente preguntando si
+                        quiere darse de baja al evento.</p>
                 </li>
             </ul>
         </section>
@@ -319,11 +316,15 @@
                 <input type="button" value="Ingresar" name="confirmarSuscripcion">
             </form>
         </section>
-        
+
     </main>
     <footer>
         <p>@Copyright 2019-SpinelsTicket</p>
-        <ul><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png" id="Insta"></li><li><img src="../img/transpa.png" id="Tw"></li></ul>
+        <ul>
+            <li><img src="../img/transpa.png" id="Face"></li>
+            <li><img src="../img/transpa.png" id="Insta"></li>
+            <li><img src="../img/transpa.png" id="Tw"></li>
+        </ul>
     </footer>
 </body>
 
